# tgcurses

./: .gitignore  COPYRIGHT  Makefile  README.txt  setup.cfg
canvas/: canvas.py
layout/: __init__.py  bounds.py
tgcurses/: __init__.py
tgcurses/canvas/: canvas.py
tgcurses/layout/: anchor.py  frame.py
tgcurses/ui/: __init__.py  edit_field.py  menu.py  test.py  window.py  workspace.py
ui/: __init__.py
