[metadata]
name = tgcurses
version = 0.9.1
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = A package for building curses user interfaces.
long_description = file: README.txt
keywords = curses
url = https://github.com/tgree/tgcurses
license = LGPLv2
license-file = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
python_requires = >=3.0
packages =
    tgcurses
    tgcurses.canvas
    tgcurses.layout
    tgcurses.ui
